--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.1.3"
   }
 }
