feat(ui): build the sign up form ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@iconify/react": ["node_modules/@iconify/react/dist/offline"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
