--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@iconify-icons/fluent": "^1.2.38",
+    "@iconify/react": "^6.0.0",
     "@prisma/client": "^6.7.0",
+    "clsx": "^2.1.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
