--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify-icons/fluent": "^1.2.38",
     "@iconify/react": "^6.0.0",
     "@prisma/client": "^6.7.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "next": "15.3.2",
     "react": "^19.0.0",
