--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@prisma/client": "^6.8.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^6.0.11",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -28,7 +28,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
